--- a/community/Navigation/CreateReport/cells/AddMediaCell.xib
+++ b/community/Navigation/CreateReport/cells/AddMediaCell.xib
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,31 +16,20 @@
                 <rect key="frame" x="0.0" y="0.0" width="144" height="246"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="apj-7z-Yh7">
-                        <rect key="frame" x="0.0" y="0.0" width="144" height="246"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="AZL-tw-pZd">
-                                <rect key="frame" x="52" y="105" width="40" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="4uG-vT-X7d"/>
-                                    <constraint firstAttribute="width" constant="40" id="7x9-hY-fwp"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" name="mainGray"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="AZL-tw-pZd">
+                        <rect key="frame" x="52" y="105" width="40" height="36"/>
                         <constraints>
-                            <constraint firstItem="AZL-tw-pZd" firstAttribute="centerY" secondItem="apj-7z-Yh7" secondAttribute="centerY" id="1p5-WJ-7Jj"/>
-                            <constraint firstItem="AZL-tw-pZd" firstAttribute="centerX" secondItem="apj-7z-Yh7" secondAttribute="centerX" id="Cuz-dr-BJK"/>
+                            <constraint firstAttribute="height" constant="40" id="4uG-vT-X7d"/>
+                            <constraint firstAttribute="width" constant="40" id="7x9-hY-fwp"/>
                         </constraints>
-                    </view>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" red="0.17299999299999999" green="0.17299999299999999" blue="0.18000000720000001" alpha="0.8035137859" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="apj-7z-Yh7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="CzN-6T-orW"/>
-                <constraint firstItem="apj-7z-Yh7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="i9c-j3-RTP"/>
-                <constraint firstAttribute="trailing" secondItem="apj-7z-Yh7" secondAttribute="trailing" id="krz-RW-Mzi"/>
-                <constraint firstAttribute="bottom" secondItem="apj-7z-Yh7" secondAttribute="bottom" id="vKM-ws-oHr"/>
+                <constraint firstItem="AZL-tw-pZd" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="6t7-9x-cla"/>
+                <constraint firstItem="AZL-tw-pZd" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="DCk-pb-eEo"/>
             </constraints>
             <size key="customSize" width="144" height="246"/>
             <point key="canvasLocation" x="205.79710144927537" y="143.97321428571428"/>
@@ -49,8 +37,5 @@
     </objects>
     <resources>
         <image name="plus" catalog="system" width="128" height="113"/>
-        <namedColor name="mainGray">
-            <color red="0.17299999296665192" green="0.17299999296665192" blue="0.18000000715255737" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
     </resources>
 </document>
