--- a/community/Navigation/CreateReport/cells/MediaCell.xib
+++ b/community/Navigation/CreateReport/cells/MediaCell.xib
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,29 +16,18 @@
                 <rect key="frame" x="0.0" y="0.0" width="134" height="192"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Dw-9K-SJg">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ysj-vJ-K3k">
                         <rect key="frame" x="0.0" y="0.0" width="134" height="192"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ysj-vJ-K3k">
-                                <rect key="frame" x="0.0" y="0.0" width="134" height="192"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" name="mainGray"/>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="Ysj-vJ-K3k" secondAttribute="bottom" id="Lf6-dG-H2S"/>
-                            <constraint firstAttribute="trailing" secondItem="Ysj-vJ-K3k" secondAttribute="trailing" id="a2h-ZM-45j"/>
-                            <constraint firstItem="Ysj-vJ-K3k" firstAttribute="top" secondItem="9Dw-9K-SJg" secondAttribute="top" id="hox-vC-WLT"/>
-                            <constraint firstItem="Ysj-vJ-K3k" firstAttribute="leading" secondItem="9Dw-9K-SJg" secondAttribute="leading" id="yPb-YY-Sda"/>
-                        </constraints>
-                    </view>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" red="0.17299999296665192" green="0.17299999296665192" blue="0.18000000715255737" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="9Dw-9K-SJg" secondAttribute="bottom" id="49Y-jH-Le2"/>
-                <constraint firstItem="9Dw-9K-SJg" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="UL1-Tz-D57"/>
-                <constraint firstItem="9Dw-9K-SJg" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="YfI-uP-ydt"/>
-                <constraint firstAttribute="trailing" secondItem="9Dw-9K-SJg" secondAttribute="trailing" id="xFX-z5-bF3"/>
+                <constraint firstItem="Ysj-vJ-K3k" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="h5F-AM-rTo"/>
+                <constraint firstAttribute="bottom" secondItem="Ysj-vJ-K3k" secondAttribute="bottom" id="ihu-OZ-4w5"/>
+                <constraint firstAttribute="trailing" secondItem="Ysj-vJ-K3k" secondAttribute="trailing" id="nbH-uE-E5o"/>
+                <constraint firstItem="Ysj-vJ-K3k" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="o6T-LJ-pwu"/>
             </constraints>
             <size key="customSize" width="134" height="192"/>
             <connections>
@@ -48,9 +36,4 @@
             <point key="canvasLocation" x="198.55072463768118" y="125.89285714285714"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <namedColor name="mainGray">
-            <color red="0.17299999296665192" green="0.17299999296665192" blue="0.18000000715255737" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-    </resources>
 </document>
