--- a/community/Navigation/ViewReport/ViewReportController.xib
+++ b/community/Navigation/ViewReport/ViewReportController.xib
@@ -57,7 +57,7 @@
                                     <constraints>
                                         <constraint firstAttribute="height" constant="400" id="J53-Ci-Rg6"/>
                                     </constraints>
-                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Rvo-k3-q64">
+                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Rvo-k3-q64">
                                         <size key="itemSize" width="128" height="128"/>
                                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
