--- a/community/Navigation/CreateReport/cells/MediaCell.xib
+++ b/community/Navigation/CreateReport/cells/MediaCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -27,6 +28,11 @@
                         </view>
                         <blurEffect style="systemUltraThinMaterialDark"/>
                     </visualEffectView>
+                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="QPX-YT-GKC">
+                        <rect key="frame" x="48.5" y="77.5" width="37" height="37"/>
+                        <color key="tintColor" systemColor="tintColor"/>
+                        <color key="color" systemColor="tintColor"/>
+                    </activityIndicatorView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ysj-vJ-K3k">
                         <rect key="frame" x="0.0" y="0.0" width="134" height="192"/>
                     </imageView>
@@ -40,12 +46,14 @@
                 <constraint firstAttribute="trailing" secondItem="wdC-P4-PT3" secondAttribute="trailing" id="ZLM-Wz-gil"/>
                 <constraint firstItem="LZF-Fm-dGZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="bmi-g8-grx"/>
                 <constraint firstItem="LZF-Fm-dGZ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="eON-Ea-7eh"/>
+                <constraint firstItem="QPX-YT-GKC" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="ez6-55-kTh"/>
                 <constraint firstAttribute="trailing" secondItem="LZF-Fm-dGZ" secondAttribute="trailing" id="gM7-AP-JH2"/>
                 <constraint firstItem="Ysj-vJ-K3k" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="h5F-AM-rTo"/>
                 <constraint firstAttribute="bottom" secondItem="Ysj-vJ-K3k" secondAttribute="bottom" id="ihu-OZ-4w5"/>
                 <constraint firstAttribute="trailing" secondItem="Ysj-vJ-K3k" secondAttribute="trailing" id="nbH-uE-E5o"/>
                 <constraint firstItem="Ysj-vJ-K3k" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="o6T-LJ-pwu"/>
                 <constraint firstItem="wdC-P4-PT3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="plV-uO-Ad9"/>
+                <constraint firstItem="QPX-YT-GKC" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="sOH-SG-IzH"/>
                 <constraint firstAttribute="bottom" secondItem="LZF-Fm-dGZ" secondAttribute="bottom" id="zBv-gf-h6D"/>
             </constraints>
             <size key="customSize" width="134" height="192"/>
@@ -56,4 +64,9 @@
             <point key="canvasLocation" x="198.55072463768118" y="125.89285714285714"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
