--- a/community/Navigation/ViewReport/ViewReportController.xib
+++ b/community/Navigation/ViewReport/ViewReportController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewReportController" customModule="community" customModuleProvider="target">
             <connections>
+                <outlet property="authorAvatarImageView" destination="t6n-Gd-Pbf" id="N8m-aS-yek"/>
                 <outlet property="locationName" destination="Oqi-c9-LDz" id="iED-G0-8dV"/>
                 <outlet property="mediaCollection" destination="jqF-s8-CLU" id="hg8-zW-ewK"/>
                 <outlet property="reportDescription" destination="C5V-8O-3Gl" id="C5t-zM-lDd"/>
@@ -27,16 +28,37 @@
                     <rect key="frame" x="16" y="64" width="382" height="778"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dkZ-lx-QKC">
-                            <rect key="frame" x="0.0" y="0.0" width="382" height="652"/>
+                            <rect key="frame" x="0.0" y="0.0" width="382" height="683"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Report name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="7Ev-NO-UK4">
-                                    <rect key="frame" x="0.0" y="0.0" width="382" height="29"/>
-                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <color key="highlightedColor" name="secondaryGray"/>
-                                </label>
+                                <view contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="s6r-sE-Uuh">
+                                    <rect key="frame" x="0.0" y="0.0" width="382" height="60"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Report name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="7Ev-NO-UK4">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="60"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="highlightedColor" name="secondaryGray"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t6n-Gd-Pbf">
+                                            <rect key="frame" x="342" y="0.0" width="40" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="Gqh-IJ-z67"/>
+                                                <constraint firstAttribute="width" secondItem="t6n-Gd-Pbf" secondAttribute="height" id="XVz-3a-eTw"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="7Ev-NO-UK4" secondAttribute="bottom" id="3xW-4n-CGx"/>
+                                        <constraint firstItem="t6n-Gd-Pbf" firstAttribute="leading" secondItem="7Ev-NO-UK4" secondAttribute="trailing" id="7j8-gJ-Ifa"/>
+                                        <constraint firstAttribute="trailing" secondItem="t6n-Gd-Pbf" secondAttribute="trailing" id="XqC-Qi-Ncc"/>
+                                        <constraint firstItem="t6n-Gd-Pbf" firstAttribute="top" secondItem="s6r-sE-Uuh" secondAttribute="top" id="Xzd-kU-Fi2"/>
+                                        <constraint firstItem="7Ev-NO-UK4" firstAttribute="leading" secondItem="s6r-sE-Uuh" secondAttribute="leading" id="bjr-Yc-9rH"/>
+                                        <constraint firstItem="7Ev-NO-UK4" firstAttribute="top" secondItem="s6r-sE-Uuh" secondAttribute="top" id="yA6-9R-sw8"/>
+                                    </constraints>
+                                </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Oqi-c9-LDz">
-                                    <rect key="frame" x="0.0" y="34" width="382" height="17"/>
+                                    <rect key="frame" x="0.0" y="65" width="382" height="17"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="17" id="EJQ-3X-uhP"/>
                                     </constraints>
@@ -45,14 +67,14 @@
                                     <color key="highlightedColor" name="secondaryGray"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5V-8O-3Gl">
-                                    <rect key="frame" x="0.0" y="56" width="382" height="191"/>
-                                    <mutableString key="text">Report descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport description</mutableString>
+                                    <rect key="frame" x="0.0" y="87" width="382" height="191"/>
+                                    <string key="text">Report descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport descriptionReport description</string>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="highlightedColor" name="secondaryGray"/>
                                 </label>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="jqF-s8-CLU">
-                                    <rect key="frame" x="0.0" y="252" width="382" height="400"/>
+                                    <rect key="frame" x="0.0" y="283" width="382" height="400"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="400" id="J53-Ci-Rg6"/>
