--- a/community/Navigation/Feed/FeedController.xib
+++ b/community/Navigation/Feed/FeedController.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeedController" customModule="community" customModuleProvider="target">
             <connections>
-                <outlet property="DropDownListButton" destination="pfK-ea-XfE" id="St8-CR-KQw"/>
+                <outlet property="dropDownListButton" destination="pfK-ea-XfE" id="St8-CR-KQw"/>
                 <outlet property="dropDownListTable" destination="XR1-YC-qhs" id="8N8-5F-Q6v"/>
                 <outlet property="pinsTable" destination="Rmd-jj-hXC" id="GeQ-Hw-XaY"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
